--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <section id="index"><!-- function buildIndex() --></section>
         <section id="content">
             <header>
-                <h1>JavaScript Flashcards: <span>Level Up your JS to ES6</span></h1>
-                <h1>Hello abc</h1>
-                <h2>Use arrows to navigate through the&nbsp;cards. <span>Click card to see definition.</span></h2>
+                <h1>JavaScript Flashcards: <span>Regular? Irregular? Plural?</span></h1>
+                
+                <h2>Use arrows to navigate through the&nbsp;cards. <span>Click card to see plural formation rules and answer.</span></h2>
             </header>
             <section id="flashcards">
                 <button id="prev"aria-label="previous"></button>
